--- a/package.json
+++ b/package.json
@@ -2,15 +2,26 @@
   "name": "test-3",
   "version": "0.1.0",
   "private": true,
+  "description": "## Project setup ``` npm install ```",
+  "author": "",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "main": ".eslintrc.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "css-loader": "^5.2.6",
+    "element-plus": "^1.0.2-beta.48",
+    "element-ui": "^2.4.5",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-axios": "^3.2.4",
+    "vue-loader": "^13.3.0",
+    "vue-loader-plugin": "^1.3.0",
+    "vue-router": "^4.0.0-0",
+    "vue-template-compiler": "^2.5.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -20,11 +31,17 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^7.0.0"
-  }
+    "eslint-plugin-vue": "^7.0.0",
+    "less": "^3.0.4",
+    "less-loader": "^4.0.0",
+    "vue-cli-plugin-element": "^1.0.1",
+    "vue-cli-plugin-element-plus": "0.0.13"
+  },
+  "license": "ISC"
 }
